--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "md5": "^2.3.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
