--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.1069.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "md5": "^2.3.0",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.8.0"
